# Advent-of-Code-2024

./: .gitmodules  Cargo.toml  README.md
.github/workflows/: rust.yml
lib/macro/: Cargo.toml
lib/macro/src/: lib.rs
lib/utils/: Cargo.toml
lib/utils/src/: lib.rs
src/: 01.rs  02.rs  03.rs  04.rs  05.rs  06.rs  07.rs  08.rs  09.rs  10.rs  11.rs  12.rs  13.rs  14.rs  15.rs  16.rs  17.rs  18.rs  setup_utils.rs  template.rs
src/2023/: 01.rs  02.rs  03.rs  04.rs  05.rs  06.rs  07.rs  08.rs  09.rs  10.rs  11.rs  12.rs  13.rs  14.rs  15.rs  16.rs  17.rs  18.rs
src/2024/: 01.rs  02.rs  03.rs  04.rs  05.rs  06.rs  07.rs  08.rs  09.rs  10.rs  11.rs  12.rs  13.rs  14.rs  15.rs
