[package]
name = "Advent-of-Code-2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
debug_print = "1.0.0"

[lib]
name = "setup_utils"
path = "src/setup_utils.rs"

[[bin]]
name = "01"
path = "src/01.rs"

[[bin]]
name = "02"
path = "src/02.rs"