[package]
name = "Advent-of-Code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
debug_print = "1.0.0"
itertools = "0.14.0"
lazy_static = "1.5.0"
regex = "1.11.1"
utils-lib = { path = "lib/utils" }


[[bin]]
name = "2023-01"
path = "src/2023/01.rs"

[[bin]]
name = "2023-02"
path = "src/2023/02.rs"

[[bin]]
name = "2023-03"
path = "src/2023/03.rs"

[[bin]]
name = "2023-04"
path = "src/2023/04.rs"

[[bin]]
name = "2023-05"
path = "src/2023/05.rs"

[[bin]]
name = "2023-06"
path = "src/2023/06.rs"

[[bin]]
name = "2023-07"
path = "src/2023/07.rs"

[[bin]]
name = "2023-08"
path = "src/2023/08.rs"

[[bin]]
name = "2023-09"
path = "src/2023/09.rs"

[[bin]]
name = "2023-10"
path = "src/2023/10.rs"

[[bin]]
name = "2023-11"
path = "src/2023/11.rs"

[[bin]]
name = "2023-12"
path = "src/2023/12.rs"

[[bin]]
name = "2023-13"
path = "src/2023/13.rs"

[[bin]]
name = "2023-14"
path = "src/2023/14.rs"

[[bin]]
name = "2023-15"
path = "src/2023/15.rs"

[[bin]]
name = "2023-16"
path = "src/2023/16.rs"

[[bin]]
name = "2023-17"
path = "src/2023/17.rs"

[[bin]]
name = "2023-18"
path = "src/2023/18.rs"

[[bin]]
name = "2024-01"
path = "src/2024/01.rs"

[[bin]]
name = "2024-02"
path = "src/2024/02.rs"

[[bin]]
name = "2024-03"
path = "src/2024/03.rs"

[[bin]]
name = "2024-04"
path = "src/2024/04.rs"

[[bin]]
name = "2024-05"
path = "src/2024/05.rs"

[[bin]]
name = "2024-06"
path = "src/2024/06.rs"

[[bin]]
name = "2024-07"
path = "src/2024/07.rs"

[[bin]]
name = "2024-08"
path = "src/2024/08.rs"

[[bin]]
name = "2024-09"
path = "src/2024/09.rs"

[[bin]]
name = "2024-10"
path = "src/2024/10.rs"

[[bin]]
name = "2024-11"
path = "src/2024/11.rs"

[[bin]]
name = "2024-12"
path = "src/2024/12.rs"

[[bin]]
name = "2024-13"
path = "src/2024/13.rs"

[[bin]]
name = "2024-14"
path = "src/2024/14.rs"

# [[bin]]
# name = "2024-15"
# path = "src/2024/15.rs"